# scamshield

./: README.md
scrapers/meta-ad-scraper/: Cargo.toml
scrapers/meta-ad-scraper/src/: main.rs
scrapers/meta-ad-scraper/src/constants/: selectors.rs
services/datasets/: forex_scams_dataset_v1.json  phishing_dataset_v1.json
services/scam-classifier/: .gitignore  pyproject.toml
services/scam-classifier/scam_classifier/: __init__.py
