[tool.poetry]
name = "scam-classifier"
version = "0.1.0"
description = ""
authors = ["grittypuffy <grittypuffy@riseup.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
pandas = "^2.2.3"
numpy = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
